@@ -35,6 +35,13 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
+		<span><b>2020-04-19</b></span>
+		<div id="changelog20200412">
+			<ul>
+				<li>Fixed hard DEF formula</li>
+			</ul>
+		</div>
+		<br/>
 		<span><b>2020-04-12</b></span>
 		<div id="changelog20200412">
 			<ul>
@@ -43,8 +50,8 @@
 				<li>Fixed flat MATK bonus for MATK computation</li>
 				<li>Fixed magical elemental damage computation</li>
 				<li>Added Old Glast Heim and April patch cards</li>
-				<li>Added new Eclase's equipment and food</li>
-				<li>Added Eclase, Valkyries' Realm, Old Glast Heim and Malangdo Culvert monsters</li>
+				<li>Added new Eclage's equipment and food</li>
+				<li>Added Eclage, Valkyries' Realm, Old Glast Heim and Malangdo Culvert monsters</li>
 				<li>Added Akkorokamui instance's equipment</li>
 			</ul>
 		</div>
